= 1.7.5 (unreleased)

* Make megabyte value size limit optional since Tokyo Tyrant can accept values larger than 1MB.
  Use :check_size => false to disable the size check. (jsl)
* Ruby 1.9 support for recent I/O changes.
* Fix duplicate value marshalling on server error. (rajiv)

= 1.7.4 (2009-06-09)

* Fix issue with raising timeout errors.

= 1.7.3 (2009-06-06)

* Remove SystemTimer support, refactor I/O to use nonblocking operations.  Speeds up
  performance approx 100%. Timeouts basically have no overhead now!  (tenderlove)
* Update load logic to support SystemTimer running in Ruby Enterprise Edition.  Thanks
  to splattael on github for the comment.

= 1.7.2 (2009-04-12)

* Rollback socket timeout optimization.  It does not work on all operating systems
  and was a support headache.

= 1.7.1 (2009-03-28)

* Performance optimizations: 
  * Rely on higher performance operating system socket timeouts for low-level socket 
    read/writes where possible, instead of the (slower) SystemTimer or (slowest,
    unreliable) Timeout libraries.
  * the native binary search is back!  The recent performance tuning made the binary search 
    a bottleneck again so it had to return.  It uses RubyInline to compile the native extension and 
    silently falls back to pure Ruby if anything fails.  Make sure you run:
    `gem install RubyInline` if you want ultimate performance.
  * the changes make memcache-client 100% faster than 1.7.0 in my performance test on Ruby 1.8.6: 
    15 sec -> 8 sec.
* Fix several logging issues.

= 1.7.0 (2009-03-08)

* Go through the memcached protocol document and implement any commands not already implemented:
  - cas
  - append
  - prepend
  - replace
  
  Append and prepend only work with raw data since it makes no sense to concatenate two Marshalled
  values together.  The cas functionality should be considered a prototype.  Since I don't have an